first view and functionality completed

--- a/app.json
+++ b/app.json
@@ -6,19 +6,28 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "backgroundColor": "#F7EFE5",
     "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#F7EFE5"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "backgroundColor": "#F7EFE5",
+      "splash": {
+        "backgroundColor": "#F7EFE5",
+        "dark": {
+          "backgroundColor": "#F7EFE5"
+        }
+      }
     },
     "android": {
+      "backgroundColor": "#F7EFE5",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#F7EFE5"
       },
       "edgeToEdgeEnabled": true
     },
